--- a/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-iac-iampolicy-manage.yaml.j2
+++ b/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-iac-iampolicy-manage.yaml.j2
@@ -1,8 +1,8 @@
 module "account_policy" {
-  source               = "{{ IAM_ACCOUNT_POLICY_SOURCE }}"
+  source               = "{{ S3_SOURCE_IAMPOLICY }}"
   name_prefix          = var.name_prefix
   create_s3_iam_group  = var.create_s3_iam_group
   create_s3_iam_policy = var.create_s3_iam_policy
   efs_csi_policy       = var.create_efs_policy
-  iam_users_list       = var.s3_iam_users_list
+  iam_users_list       = var.s3_iam_users_list_manage
 }
