--- a/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-iac-variablesTF.yaml.j2
+++ b/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-iac-variablesTF.yaml.j2
@@ -16,55 +16,56 @@ variable "vpc_id" {
 }
 {%- endif %}
 
-
-{%- if (IS_IAM | lower == 'true') or (IS_S3 | lower == 'true') %}
+{%- if IS_S3 | lower == 'true'%}
 variable "name_prefix" {
     type        = string
     description = "name_prefix"
 }
-{%- endif %}
-
-{%- if IS_IAM | lower == 'true'%}
 
 variable "create_s3_iam_group" {
     type        = bool
     description = "Whether to create s3 iam group or not"
 }
+
 variable "create_s3_iam_policy" {
     type        = bool
     description = "Whether to create s3 iam group or not"
 }
+
 variable "create_efs_policy" {
     type        = bool
     description = "Whether to create efs policy or not"
 }
-variable "s3_iam_users_list" {
+
+variable "s3_iam_users_list_manage" {
     description = "s3 user list"
         type = map(object({
         iam_user_name = string
     }))
 }
-{%- endif %}
 
-{%- if IS_S3 | lower == 'true'%}
 variable "access_level_rw" {
     type        = string
     description = "read and write"
     default     = "rw"
 }
+
 variable "access_level_ro" {
     type        = string
     description = "read and write"
     default     = "ro"
 }
+
 variable "common_tags" {
     type        = map(string)
     description = "Common resource tags"
 }
+
 variable "create_bucket" {
     type        = bool
     description = "Enable creation of bucket"
 }
+
 variable "location" {
     type = object({
       region             = string
@@ -76,24 +77,29 @@ variable "location" {
       availability_zones = ["us-east-1a", "us-east-1b", "us-east-1c"]
     }
 }
-variable "s3bucket_name_prefix" {
-    type        = string
-    description = "s3 bucket name prefix"
-}
-variable "iam_user_arn_prefix" {
-    type        = string
-    description = "iam user arn"
-}
+
 variable "s3_encryption_algorithm" {
     type        = string
     description = "s3 encryption algorithm"
 }
+
 variable "create_bucket" {
     type        = bool
     description = "Enable creation of bucket"
 }
+
 variable "environment" {
     type        = string
     description = "Environment name"
 }
+{%- if S3_MANAGE | lower == 'true'%}
+variable "s3bucket_name_prefix_manage" {
+    type        = string
+    description = "s3 bucket name prefix"
+}
+variable "iam_user_arn_prefix_manage" {
+    type        = string
+    description = "iam user arn"
+}
+{%- endif %}
 {%- endif %}
