[patch] fix merging conflicts and add imagestitching parameters back

--- a/tekton/src/pipelines/taskdefs/apps/manage-app.yml.j2
+++ b/tekton/src/pipelines/taskdefs/apps/manage-app.yml.j2
@@ -86,6 +86,8 @@
       value: $(params.mas_manage_attachment_configuration_mode)
     - name: mas_manage_attachments_provider
       value: $(params.mas_manage_attachments_provider)
+    - name: mas_manage_imagestitching_storage_class
+      value: $(params.storage_class_rwx)
     - name: db2_namespace
       value: $(params.db2_namespace)
     - name: ibmcloud_resourcegroup
