[patch] Add default value for aiservice_instance_id in suite-app-install

--- a/tekton/src/tasks/suite-app-install.yml.j2
+++ b/tekton/src/tasks/suite-app-install.yml.j2
@@ -23,6 +23,7 @@ spec:
     - name: aiservice_instance_id
       type: string
       description: AI Service Instance ID
+      default: ""
 
     # Custom Label Support
     - name: custom_labels
