--- a/tekton/src/pipelines/taskdefs/fvt-manage/phase5.yml.j2
+++ b/tekton/src/pipelines/taskdefs/fvt-manage/phase5.yml.j2
@@ -27,6 +27,9 @@
     - fvt-manage-base-ui-user-crud
     - fvt-manage-base-ui-user-consumption
     - fvt-manage-base-ui-communication-temp
+    - fvt-manage-base-ui-scheduler-scheduling
+    - fvt-manage-base-ui-scheduler-dispatching
+    - fvt-manage-base-ui-scheduler-planning
 
 # Manage FVT Work Order Attachments
 - name: fvt-manage-base-ui-wo-doclink
@@ -48,6 +51,9 @@
     - fvt-manage-base-ui-user-crud
     - fvt-manage-base-ui-user-consumption
     - fvt-manage-base-ui-communication-temp
+    - fvt-manage-base-ui-scheduler-scheduling
+    - fvt-manage-base-ui-scheduler-dispatching
+    - fvt-manage-base-ui-scheduler-planning
 
 # Manage Direct Print Report Tasks
 - name: fvt-manage-base-ui-directprint
@@ -67,6 +73,9 @@
     - fvt-manage-base-ui-user-crud
     - fvt-manage-base-ui-user-consumption
     - fvt-manage-base-ui-communication-temp
+    - fvt-manage-base-ui-scheduler-scheduling
+    - fvt-manage-base-ui-scheduler-dispatching
+    - fvt-manage-base-ui-scheduler-planning
 
 # Manage FVT Adhoc Reports
 - name: fvt-manage-base-ui-adhoc-report
@@ -86,6 +95,9 @@
     - fvt-manage-base-ui-user-crud
     - fvt-manage-base-ui-user-consumption
     - fvt-manage-base-ui-communication-temp
+    - fvt-manage-base-ui-scheduler-scheduling
+    - fvt-manage-base-ui-scheduler-dispatching
+    - fvt-manage-base-ui-scheduler-planning
 
 
 # Manage FVT Adhoc Reports
@@ -101,3 +113,6 @@
     - fvt-manage-base-ui-user-crud
     - fvt-manage-base-ui-user-consumption
     - fvt-manage-base-ui-communication-temp
+    - fvt-manage-base-ui-scheduler-scheduling
+    - fvt-manage-base-ui-scheduler-dispatching
+    - fvt-manage-base-ui-scheduler-planning
