[patch] add opensearch to gitops cp4d services

--- a/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-cp4d-services-base.yaml.j2
+++ b/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-cp4d-services-base.yaml.j2
@@ -11,3 +11,5 @@ ibm_cp4d_services_base:
   rabbitmq_install_plan : "{{ RABBITMQ_INSTALL_PLAN }}"
   opencontent_elasticsearch_channel: "<path:{{ SECRETS_PATH }}:{{ SECRET_KEY_OPENCONTENT_ELASTICSEARCH_CHANNEL }}>"
   elasticsearch_install_plan: "{{ ELASTICSEARCH_INSTALL_PLAN }}"
+  opencontent_opensearch_channel: "<path:{{ SECRETS_PATH }}:{{ SECRET_KEY_OPENCONTENT_OPENSEARCH_CHANNEL }}>"
+  opensearch_install_plan: "{{ OPENSEARCH_INSTALL_PLAN }}"
