--- a/tekton/src/pipelines/gitops/gitops-mas-apps.yml.j2
+++ b/tekton/src/pipelines/gitops/gitops-mas-apps.yml.j2
@@ -543,6 +543,9 @@ spec:
     - name: elasticsearch_install_plan
       type: string
       default: "Automatic"
+    - name: opensearch_install_plan
+      type: string
+      default: "Automatic"
     - name: canvasbase_install_plan
       type: string
       default: "Automatic"
@@ -1832,6 +1835,8 @@ spec:
           value: $(params.rabbitmq_install_plan)
         - name: elasticsearch_install_plan
           value: $(params.elasticsearch_install_plan)
+        - name: opensearch_install_plan
+          value: $(params.opensearch_install_plan)
         - name: canvasbase_install_plan
           value: $(params.canvasbase_install_plan)
         
@@ -1923,6 +1928,8 @@ spec:
           value: $(params.rabbitmq_install_plan)
         - name: elasticsearch_install_plan
           value: $(params.elasticsearch_install_plan)
+        - name: opensearch_install_plan
+          value: $(params.opensearch_install_plan)
         - name: canvasbase_install_plan
           value: $(params.canvasbase_install_plan)
 
@@ -1977,6 +1984,8 @@ spec:
           value: $(params.rabbitmq_install_plan)
         - name: elasticsearch_install_plan
           value: $(params.elasticsearch_install_plan)
+        - name: opensearch_install_plan
+          value: $(params.opensearch_install_plan)
         - name: canvasbase_install_plan
           value: $(params.canvasbase_install_plan)
 
@@ -2032,6 +2041,8 @@ spec:
           value: $(params.rabbitmq_install_plan)
         - name: elasticsearch_install_plan
           value: $(params.elasticsearch_install_plan)
+        - name: opensearch_install_plan
+          value: $(params.opensearch_install_plan)
         - name: canvasbase_install_plan
           value: $(params.canvasbase_install_plan)
 
