[patch] Integrate aiservice-tenant task into aiservice

--- a/tekton/src/pipelines/taskdefs/aiservice/aiservice.yml.j2
+++ b/tekton/src/pipelines/taskdefs/aiservice/aiservice.yml.j2
@@ -65,6 +65,20 @@
     - name: aiservice_watsonxai_verify
       value: $(params.aiservice_watsonxai_verify)
 
+    - name: tenant_entitlement_type
+      value: $(params.tenant_entitlement_type)
+    - name: tenant_entitlement_start_date
+      value: $(params.tenant_entitlement_start_date)
+    - name: tenant_entitlement_end_date
+      value: $(params.tenant_entitlement_end_date)
+
+    - name: rsl_url
+      value: $(params.rsl_url)
+    - name: rsl_org_id
+      value: $(params.rsl_org_id)
+    - name: rsl_token
+      value: $(params.rsl_token)
+      
     - name: mas_icr_cp
       value: $(params.mas_icr_cp)
     - name: mas_icr_cpopen
