--- a/tekton/src/pipelines/mas-install.yml.j2
+++ b/tekton/src/pipelines/mas-install.yml.j2
@@ -208,13 +208,13 @@ spec:
     # -------------------------------------------------------------------------
     {{ lookup('template', pipeline_src_dir ~ '/taskdefs/aiservice/minio.yml.j2') | indent(4) }}
       runAfter:
-        - cert-manager
+        - ibm-catalogs
 
     # 4.5 Opendatahub ( for AI Service )
     # -------------------------------------------------------------------------
     {{ lookup('template', pipeline_src_dir ~ '/taskdefs/aiservice/odh.yml.j2', template_vars={'application': 'aiservice'}) | indent(4) }}
       runAfter:
-        - minio
+        - cert-manager
 
     # 5. Install & Configure IBM MAS
     # -------------------------------------------------------------------------
@@ -389,12 +389,6 @@ spec:
         - db2-aiservice
         - aiservice-odh
 
-    # 14.2 Create Default AI Service Tenant
-    # -------------------------------------------------------------------------
-    {{ lookup('template', pipeline_src_dir ~ '/taskdefs/aiservice/aiservice-tenant.yml.j2') | indent(4) }}
-      runAfter:
-        - aiservice
-
     # 15. Verify health of the cluster before we consider the install complete
     # -------------------------------------------------------------------------
     {{ lookup('template', pipeline_src_dir ~ '/taskdefs/cluster-setup/ocp-verify.yml.j2', template_vars={'name': 'post-install-verify', 'devops_suite_name': 'post-install-verify'}) | indent(4) }}
@@ -408,7 +402,7 @@ spec:
         - eck
         - turbonomic
         - cognos
-        - aiservice-tenant
+        - aiservice
 
   finally:
     # Update synchronization configmap
