New updated in variables

--- a/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-iac-terraformTFvars.yaml.j2
+++ b/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-iac-terraformTFvars.yaml.j2
@@ -23,6 +23,7 @@ common_tags = {
 }
 create_bucket        = true
 s3_encryption_algorithm = "AES256"
+account_id = "{{ACCOUNT_ID}}"
 location = {
     region             = "{{REGION_NAME}}"
     availability_zones = ["{{REGION_NAME}}a", "{{REGION_NAME}}b", "{{REGION_NAME}}c"]
