--- a/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-iac-s3accesspoints-manage.yaml.j2
+++ b/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-iac-s3accesspoints-manage.yaml.j2
@@ -17,10 +17,10 @@ module "s3buckets_access_point" {
   # ✅ Dynamically select correct IAM user based on bucket name
   s3_access_point_user = (
     can(regex("log", each.value.name)) ? (
-      can(local.iam_user_arns["logs_rw"]) ? local.iam_user_arns["logs_rw"] :
-      local.iam_user_arns["logs_ro"]
+      can(local.iam_user_arns_manage["logs_rw"]) ? local.iam_user_arns_manage["logs_rw"] :
+      local.iam_user_arns_manage["logs_ro"]
     ) :
-    can(regex("doclinks", each.value.name)) ? local.iam_user_arns["doclinks"] :
+    can(regex("doclinks", each.value.name)) ? local.iam_user_arns_manage["doclinks"] :
     null
   )
 
