--- a/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-iac-mainTF.yaml.j2
+++ b/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-iac-mainTF.yaml.j2
@@ -26,6 +26,7 @@ data "aws_subnets" "internal_subnets" {
 locals {
 {%- if IS_S3 | lower == 'true' %}
 {%- if S3_MANAGE | lower == 'true'  %}
+  # Manage related params for S3
   iam_user_arns_manage = {
     custfiles = "${var.iam_user_arn_prefix_manage}-custfiles-${var.access_level_rw}"
     doclinks  = "${var.iam_user_arn_prefix_manage}-doclinks-${var.access_level_rw}"
@@ -77,7 +78,7 @@ locals {
     key => lookup(local.bucket_user_names_manage, key, null)
   }
 {%- endif %}
-
+  # Common S3 params
   s3_actions = {
     ro = ["s3:GetObject", "s3:ListBucket"]
     rw = ["s3:GetObject", "s3:PutObject", "s3:DeleteObject", "s3:ListBucket"]
@@ -90,6 +91,7 @@ locals {
     instance = {
       name = var.instance_name
       {%- if S3_MANAGE | lower == 'true'  %}
+      # Manage specific S3 buckets
       manage = {
           s3buckets = {
             doclinks = {
@@ -136,6 +138,7 @@ locals {
     }
     name = var.cluster_name
   {%- if IS_EFS | lower == 'true' %}
+    # EFS related params
     "external_subnet_ids" : data.aws_subnets.external_subnets.ids
     "internal_subnet_ids" : data.aws_subnets.internal_subnets.ids
   {%- endif %}
