name change added comments

--- a/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-iac-mainTF.yaml.j2
+++ b/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-iac-mainTF.yaml.j2
@@ -92,47 +92,45 @@ locals {
       name = var.instance_name
       {%- if S3_MANAGE | lower == 'true'  %}
       # Manage specific S3 buckets
-      manage = {
-          s3buckets = {
-            doclinks = {
-              name_prefix          = var.name_prefix
-              create               = var.create_bucket
-              name                 = "${var.s3bucket_name_prefix_manage}-doclinks"
-              id                   = "${var.s3bucket_name_prefix_manage}-doclinks"
-              access_level         = "rw"
-              s3_bucket_arn        = "arn:aws:s3:::${var.s3bucket_name_prefix_manage}-doclinks"
-              secret_suffix        = "manage_attachments/cos-attachments"
-              cos_secret_format    = false
-              manage_secret_format = true
-              expiration           = null
-            },
-            custfiles = {
-              name_prefix          = var.name_prefix
-              create               = var.create_bucket
-              name                 = "${var.s3bucket_name_prefix_manage}-custfiles"
-              id                   = "${var.s3bucket_name_prefix_manage}-custfiles"
-              access_level         = "rw"
-              s3_bucket_arn        = "arn:aws:s3:::${var.s3bucket_name_prefix_manage}-custfiles"
-              secret_suffix        = "manage_custfiles/cos-custfiles"
-              cos_secret_format    = false
-              manage_secret_format = true
-              expiration = {
-                days = 366 // how long to keep logs
-              }
-            },
-            logs = {
-              name_prefix          = var.name_prefix
-              create               = var.create_bucket
-              name                 = "${var.s3bucket_name_prefix_manage}-log"
-              id                   = "${var.s3bucket_name_prefix_manage}-log"
-              access_level         = "ro"
-              s3_bucket_arn        = "arn:aws:s3:::${var.s3bucket_name_prefix_manage}-log"
-              secret_suffix        = "manage_logging/cos-logging"
-              cos_secret_format    = false
-              manage_secret_format = true
-              expiration           = null
-            }
+      manage_s3buckets = {
+        doclinks = {
+          name_prefix          = var.name_prefix
+          create               = var.create_bucket
+          name                 = "${var.s3bucket_name_prefix_manage}-doclinks"
+          id                   = "${var.s3bucket_name_prefix_manage}-doclinks"
+          access_level         = "rw"
+          s3_bucket_arn        = "arn:aws:s3:::${var.s3bucket_name_prefix_manage}-doclinks"
+          secret_suffix        = "manage_attachments/cos-attachments"
+          cos_secret_format    = false
+          manage_secret_format = true
+          expiration           = null
+        },
+        custfiles = {
+          name_prefix          = var.name_prefix
+          create               = var.create_bucket
+          name                 = "${var.s3bucket_name_prefix_manage}-custfiles"
+          id                   = "${var.s3bucket_name_prefix_manage}-custfiles"
+          access_level         = "rw"
+          s3_bucket_arn        = "arn:aws:s3:::${var.s3bucket_name_prefix_manage}-custfiles"
+          secret_suffix        = "manage_custfiles/cos-custfiles"
+          cos_secret_format    = false
+          manage_secret_format = true
+          expiration = {
+            days = 366 // how long to keep logs
           }
+        },
+        logs = {
+          name_prefix          = var.name_prefix
+          create               = var.create_bucket
+          name                 = "${var.s3bucket_name_prefix_manage}-log"
+          id                   = "${var.s3bucket_name_prefix_manage}-log"
+          access_level         = "ro"
+          s3_bucket_arn        = "arn:aws:s3:::${var.s3bucket_name_prefix_manage}-log"
+          secret_suffix        = "manage_logging/cos-logging"
+          cos_secret_format    = false
+          manage_secret_format = true
+          expiration           = null
+        }
       }
     {%- endif %}
     }
