--- a/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-iac-s3accesspoints-manage.yaml.j2
+++ b/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-iac-s3accesspoints-manage.yaml.j2
@@ -1,7 +1,7 @@
 module "s3buckets_access_point" {
   source = "{{ S3_SOURCE_S3ACCESSPOINT }}"
   for_each = {
-    for k, v in local.cluster.instance.manage.s3buckets :
+    for k, v in local.cluster.instance.manage_s3buckets :
     k => v if can(regex("log", v.name)) || can(regex("doclinks", v.name))
   }
 
