--- a/tekton/src/pipelines/taskdefs/dependencies/dro.yml.j2
+++ b/tekton/src/pipelines/taskdefs/dependencies/dro.yml.j2
@@ -8,6 +8,9 @@
     - name: mas_instance_id
       value: $(params.mas_instance_id)
 
+    - name: aiservice_instance_id
+      value: $(params.aiservice_instance_id)
+
     - name: custom_labels
       value: $(params.custom_labels)
     - name: ocp_ingress_tls_secret_name
@@ -25,10 +28,6 @@
       value: $(params.dro_namespace)
     - name: dro_storage_class
       value: $(params.storage_class_rwo)
-  when:
-    - input: "$(params.mas_instance_id)"
-      operator: notin
-      values: [""]
 
   taskRef:
     kind: Task
