--- a/tekton/src/pipelines/taskdefs/dependencies/mongo.yml.j2
+++ b/tekton/src/pipelines/taskdefs/dependencies/mongo.yml.j2
@@ -8,6 +8,9 @@
     - name: mas_instance_id
       value: $(params.mas_instance_id)
 
+    - name: aiservice_instance_id
+      value: $(params.aiservice_instance_id)
+
     - name: mongodb_namespace
       value: $(params.mongodb_namespace)
     - name: mongodb_storage_class
@@ -42,9 +45,6 @@
     - input: "$(params.mongodb_action)"
       operator: in
       values: ["install"]
-    - input: "$(params.mas_instance_id)"
-      operator: notin
-      values: [""]
 
   taskRef:
     kind: Task
