--- a/tekton/src/pipelines/taskdefs/dependencies/sls.yml.j2
+++ b/tekton/src/pipelines/taskdefs/dependencies/sls.yml.j2
@@ -8,6 +8,9 @@
     - name: mas_instance_id
       value: $(params.mas_instance_id)
 
+    - name: aiservice_instance_id
+      value: $(params.aiservice_instance_id)
+
     - name: artifactory_username
       value: $(params.artifactory_username)
     - name: artifactory_token
