--- a/tekton/src/tasks/dependencies/dro.yml.j2
+++ b/tekton/src/tasks/dependencies/dro.yml.j2
@@ -14,6 +14,9 @@ spec:
     - name: mas_instance_id
       type: string
       default: ""
+    - name: aiservice_instance_id 
+      type: string
+      default: ""
     - name: custom_labels
       type: string
       description: Optional MAS custom labels, comma separated list of key=value pairs
@@ -46,9 +49,16 @@ spec:
       image: quay.io/ibmmas/cli:latest
       imagePullPolicy: $(params.image_pull_policy)
       workingDir: /workspace/configs
-      command:
-        - /opt/app-root/src/run-role.sh
-        - dro
+      script: |
+        #!/bin/bash
+        
+        # During a standalone AI Service installation, a dro-config(fake) must be created by using the AISERVICE_INSTANCE_ID as the MAS_INSTANCE_ID
+        if [[ "$MAS_INSTANCE_ID" == "" ]] && [[ "$AISERVICE_INSTANCE_ID" != "" ]]; then
+            echo "Setting MAS_INSTANCE_ID based on AISERVICE_INSTANCE_ID for standalone AI Service install"
+            MAS_INSTANCE_ID=$AISERVICE_INSTANCE_ID
+        fi
+        /opt/app-root/src/run-role.sh dro
+
       env:
         {{ lookup('template', task_src_dir ~ '/common/cli-env-nosuitename.yml.j2') | indent(8) }}
         - name: DEVOPS_SUITE_NAME
@@ -63,6 +73,8 @@ spec:
           value: /workspace/configs
         - name: MAS_INSTANCE_ID
           value: $(params.mas_instance_id)
+        - name: AISERVICE_INSTANCE_ID
+          value: $(params.aiservice_instance_id)    
         - name: OCP_INGRESS_TLS_SECRET_NAME
           value: $(params.ocp_ingress_tls_secret_name)
         - name: MAS_POD_TEMPLATES_DIR
