--- a/tekton/src/tasks/dependencies/sls.yml.j2
+++ b/tekton/src/tasks/dependencies/sls.yml.j2
@@ -11,6 +11,10 @@ spec:
       type: string
       description: Instance ID
       default: "" # By default, no config will be generated
+    - name: aiservice_instance_id
+      type: string
+      description: AI Service Instance ID
+      default: "" 
     - name: custom_labels
       type: string
       description: Optional MAS custom labels, comma separated list of key=value pairs
@@ -66,6 +70,8 @@ spec:
         value: /workspace/configs
       - name: MAS_INSTANCE_ID
         value: $(params.mas_instance_id)
+      - name: AISERVICE_INSTANCE_ID
+        value: $(params.aiservice_instance_id)
       - name: CUSTOM_LABELS
         value: $(params.custom_labels)
 
@@ -102,9 +108,16 @@ spec:
 
   steps:
     - name: sls
-      command:
-        - /opt/app-root/src/run-role.sh
-        - sls
+      script: |
+        #!/bin/bash
+        
+        # During a standalone AI Service installation, a sls-config(fake) must be created by using the AISERVICE_INSTANCE_ID as the MAS_INSTANCE_ID
+        if [[ "$MAS_INSTANCE_ID" == "" ]] && [[ "$AISERVICE_INSTANCE_ID" != "" ]]; then
+            echo "Setting MAS_INSTANCE_ID based on AISERVICE_INSTANCE_ID for standalone AI Service install"
+            MAS_INSTANCE_ID=$AISERVICE_INSTANCE_ID
+        fi
+        /opt/app-root/src/run-role.sh sls
+
       image: quay.io/ibmmas/cli:latest
       imagePullPolicy: $(params.image_pull_policy)
       workingDir: /workspace/configs
